# fluxon

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-MIT  README.md  README.uz.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: FRONTEND-IMPLEMENTATION-PLAN.md  FRONTEND-PROD-ARCHITECTURE.md  ROADMAP.md  flux-agent.md  flux-frontend.md  flux-human.en.md  flux-human.md  flux-human.uz.md  fluxon-agent.md  fluxon-human.md  fluxon-human.uz.md  pkg-format.md
examples/: db_demo.fx
examples/chat/: channels.fx  cron.fx  messages.fx  moderation.fx  realtime.fx  schema.fx
examples/ecommerce/: aifeatures.fx  cart.fx  checkout.fx  jobs.fx  main.fx  products.fx  reviews.fx  schema.fx
examples/support-tickets/: classify.fx  main.fx  report.fx  schema.fx  tickets.fx  validate.fx
research/: README.md
research/frontend-architecture/: ARCHITECTURE-prod-frontend.md  _research_workflow.js  research-astro-solid.md  research-compiler-analysis.md  research-marko.md  research-qwik.md  research-rsc.md
research/frontend-design/: README.md
research/frontend-design/round1-invented-ui-langs/agent-a/: design.md
research/frontend-design/round1-invented-ui-langs/agent-b/: design.md
research/frontend-design/round1-invented-ui-langs/agent-c/: design.md
research/frontend-design/round1-invented-ui-langs/analysis/: OLD-flux-frontend-rejected.md  convergence.md
research/frontend-design/round2-flux-integration/agent-a/: design.md
research/frontend-design/round2-flux-integration/agent-b/: design.md
research/frontend-design/round2-flux-integration/agent-c/: design.md
research/frontend-design/round2-flux-integration/analysis/: convergence.md
research/frontend-design/round3-stress-test/agent-a/: panel.md
research/frontend-design/round3-stress-test/agent-b/: panel.md
research/frontend-design/round3-stress-test/agent-c/: panel.md
research/frontend-design/round3-stress-test/analysis/: gaps.md
research/language-design/round1-invented-langs/agent-a/: NOTES.md  SPEC.md  project1-cli.fx  project2-webapi.fx  project3-realtime.fx
research/language-design/round1-invented-langs/agent-b/: NOTES.md  SPEC.md  project1-cli.fx  project2-webapi.fx  project3-realtime.fx
research/language-design/round1-invented-langs/agent-c/: NOTES.md  SPEC.md  project1-cli.lune  project2-webapi.lune  project3-realtime.lune
research/language-design/round2-whatsapp/agent-a/: NOTES.md  SPEC.md  cron.fx  main.fx  schema.fx  tools.fx  webhook.fx
research/language-design/round2-whatsapp/agent-b/: NOTES.md  SPEC.md  cron.nol  main.nol  schema.nol  tools.nol  webhook.nol  whatsapp.nol
research/language-design/round2-whatsapp/agent-c/: NOTES.md  README.md  SPEC.md  cron.quill  main.quill  schema.quill  tools.quill  webhook.quill
research/language-design/round6-db-orm/: PRD.md  RESULTS.md  run-experiment.mjs
research/language-design/round6-db-orm/round2-validation/: RESULTS.md  agent-output.fx  flux-agent.builder.md  fluxon-agent.builder.md  validate.mjs
research/language-design/round6-db-orm/runs/: judge.json  v0-baseline.fx  v1-nested-map.fx  v2-suffix.fx  v3-string-dsl.fx  v4-builder.fx
research/language-design/round6-db-orm/specs/: flux-agent.v0-baseline.md  flux-agent.v1-nested-map.md  flux-agent.v2-suffix.md  flux-agent.v3-string-dsl.md  flux-agent.v4-builder.md  fluxon-agent.v0-baseline.md  fluxon-agent.v1-nested-map.md  fluxon-agent.v2-suffix.md  fluxon-agent.v3-string-dsl.md  fluxon-agent.v4-builder.md
runtime/: Cargo.toml  README.md  REFACTOR.md
runtime/examples/: ai_chat.fx  ai_demo.fx  ai_model_switch.fx  ai_providers.fx  ai_stream.fx  ai_stream_ws.fx  auth_demo.fx  cors_server.fx  cron_demo.fx  db_query.fx  demo.fx  fib_server.fx  fs_demo.fx  http_client_pool.fx  http_headers.fx  http_redirect.fx  io_repl.fx  md_demo.fx  middleware.fx  par_smoke.fx  poll.fx  queue_demo.fx  ratelimit.fx  server.fx  sh_demo.fx  static_server.fx  token_counter.fx  trycatch_demo.fx  tui_demo.fx  tui_showcase.fx  ui_counter.fx  ui_live.fx  ui_serve.fx  ui_view.fx  ws_chat.fx
runtime/examples/modules/: greet.fx  main.fx
runtime/examples/public/: app.css  index.html
runtime/src/: ai_mod.rs  ast.rs  auth_mod.rs  builtins.rs  check.rs  cron_mod.rs  crypto_mod.rs  db_mod.rs  http_mod.rs  interp.rs  lexer.rs  main.rs  par_mod.rs  parser.rs  queue_mod.rs  reg_mod.rs  serve_mod.rs  token.rs  ui_analyze.rs  ui_client.js  ui_mod.rs  value.rs  ws_mod.rs
runtime/src/builtins/: args.rs  bytes_mod.rs  fs_mod.rs  io_mod.rs  json_mod.rs  math_mod.rs  methods.rs  rand_mod.rs  sh_mod.rs  str_mod.rs  time_mod.rs  tui_mod.rs
runtime/src/db_mod/: interp.rs  migrate.rs  pool.rs  sqlite.rs  tx.rs  values.rs
runtime/src/http_mod/: client.rs  interp.rs  limits.rs  middleware.rs  request.rs  response.rs  routing.rs  server.rs  static_files.rs
runtime/src/interp/: call.rs  exec.rs  expr.rs  mod.rs  module.rs  pkg.rs  scope.rs  util.rs
runtime/src/tests/: ai_sh_tests.rs  auth_tests.rs  bind_tests.rs  block_str_tests.rs  bytes_tests.rs  call_tests.rs  cron_tests.rs  crypto_tests.rs  db_tests.rs  db_tx_tests.rs  env_json_reg_tests.rs  framework_tests.rs  interp_err_tests.rs  list_tests.rs  log_tests.rs  logic_alias_tests.rs  map_tests.rs  math_each_tests.rs  migrate_tests.rs  mod.rs  par_tests.rs  pipe_fail_tests.rs  queue_tests.rs  range_tests.rs  rep_tests.rs  repl_tests.rs  str_order_tests.rs  str_time_tests.rs  sym_tests.rs  try_tests.rs  tui_tests.rs  use_module_tests.rs
runtime/tests/: http_body_limit_e2e.rs  http_cors_e2e.rs  http_middleware_e2e.rs  http_ratelimit_e2e.rs  http_static_e2e.rs  ws_e2e.rs
runtime/tests-fx/: 01_core.fx  02_collections_modules.fx  03_db.fx  03b_check.fx  03b_db_rollback.fx  04_time_env.fx  05_http_client.fx  05_http_server.fx  06_reg.fx  07_cron.fx  08_io.fx  09_fs.fx  10_ai.fx  11_sh.fx  12_modules.fx  13_auth.fx  14_crypto.fx  mod_math.fx  mod_nested.fx  run_all.sh
(+108 files in other folders)
