[package]
name = "flux"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes = "1"
parking_lot = "0.12"
mimalloc = "0.1"
# db battery: SQLite (bundled — tizim kutubxonasi/server kerak emas, CI'da yashil).
# Boshqa backendlar (postgres/mysql) keyin Db trait orqasiga additiv ulanadi.
rusqlite = { version = "0.40", features = ["bundled"] }
# ws battery: WebSocket handshake + framing. hyper 1.x / tokio ekotizimiga mos.
# TLS yo'q (wss keyin additiv) — sof tokio TcpStream ustida.
tokio-tungstenite = "0.24"
# WS stream'ni read/write yo'nalishlarga split qilish (SplitSink/SplitStream).
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# http klient TLS: https:// so'rovlar uchun rustls connector. webpki-roots —
# Mozilla CA ildizlari kompilyatsiyaga bog'lanadi (tizim sertifikatiga tayanmaydi,
# CI/portable barqaror, rusqlite "bundled" falsafasiga mos). ring crypto provayder
# (sof, C kompilyator/OpenSSL talab qilmaydi). default features o'chirilgan —
# aws-lc-rs (C toolchain) va native-certs olib kelmaslik uchun.
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "tls12", "webpki-roots"] }
# cron battery: standart Unix 5-maydonli ifodani (`0 * * * *`) parse qiladi va
# keyingi ishga tushish vaqtini hisoblaydi (Schedule::upcoming).
cron = "0.12"
# cron crate UTC sana-vaqt arifmetikasi uchun chrono'ga tayanadi (next-run hisoblash).
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# auth battery: JWT (HS256) imzolash/tekshirish — HMAC-SHA256. Sof Rust
# (RustCrypto), C toolchain/OpenSSL talab qilmaydi — `rusqlite bundled` /
# webpki-roots falsafasiga mos, CI'da portativ va yashil.
hmac = "0.12"
sha2 = "0.10"
# JWT segmentlari base64url (padding'siz) — header/payload/imzo kodlash.
base64 = "0.22"
# auth battery: parol hash (argon2id — bcrypt'dan afzal, default xavfsiz).
# Salt avtomatik (PHC string ichida), `auth.check` doimiy-vaqt taqqoslash.
argon2 = "0.5"
