[package]
name = "fluxon"
version = "0.1.0"
edition = "2024"
description = "A batteries-included backend programming language that AI agents write well"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluxon-lang/fluxon"
homepage = "https://github.com/fluxon-lang/fluxon"
readme = "README.md"
keywords = ["language", "interpreter", "backend", "ai"]
categories = ["compilers", "development-tools"]
# Name-claiming release: we don't ship the large example/test folders in the package
# (not needed to compile, they only bloat the size). src/ and README are enough.
exclude = ["examples/", "tests-fx/", "tests/"]

[dependencies]
# "fs" — make http.static file reads async (issue #134, the worker doesn't block).
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time", "fs"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes = "1"
parking_lot = "0.12"
mimalloc = "0.1"
# db battery: SQLite (bundled — no system library/server needed, green in CI).
# Other backends (postgres/mysql) plug in additively behind the Db trait later.
rusqlite = { version = "0.40", features = ["bundled"] }
# ws battery: WebSocket handshake + framing. Fits the hyper 1.x / tokio ecosystem.
# No TLS (wss added additively later) — over a plain tokio TcpStream.
tokio-tungstenite = "0.24"
# Splitting the WS stream into read/write halves (SplitSink/SplitStream).
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# http client TLS: rustls connector for https:// requests. webpki-roots —
# Mozilla CA roots are compiled in (no reliance on the system certificate store,
# stable in CI/portable, matches the rusqlite "bundled" philosophy). ring crypto
# provider (pure, needs no C compiler/OpenSSL). default features disabled —
# to avoid pulling in aws-lc-rs (C toolchain) and native-certs.
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "tls12", "webpki-roots"] }
# cron battery: parses a standard Unix 5-field expression (`0 * * * *`) and
# computes the next run time (Schedule::upcoming).
cron = "0.12"
# the cron crate relies on chrono for UTC date-time arithmetic (next-run computation).
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# time battery: IANA zone names (`Asia/Tashkent`) -> DST-aware wall-clock conversion.
# Pure Rust, zone data compiled in (no system tzdata needed) —
# matches the `rusqlite bundled` / webpki-roots philosophy, stable in CI/portable.
chrono-tz = { version = "0.10", default-features = false }
# auth battery: JWT (HS256) signing/verification — HMAC-SHA256. Pure Rust
# (RustCrypto), needs no C toolchain/OpenSSL — matches the `rusqlite bundled` /
# webpki-roots philosophy, portable and green in CI.
hmac = "0.12"
sha2 = "0.10"
# JWT segments are base64url (no padding) — encoding the header/payload/signature.
base64 = "0.22"
# auth battery: password hashing (argon2id — preferred over bcrypt, secure by default).
# Salt is automatic (inside the PHC string), `auth.check` does a constant-time compare.
argon2 = "0.5"
# Recursion safety (issue #90): grows the native stack in segments during deep
# Fluxon recursion (rustc uses the same approach). That way the depth limit
# (MAX_CALL_DEPTH) depends only on a counter, not on native stack size —
# even on a 2MB spawn_blocking thread it yields a graceful error instead of an abort.
stacker = "0.1"
